# rust-parcel-learning

./: .gitignore  README.md  package-lock.json  package.json
crate/: Cargo.toml
crate/src/: lib.rs
crate/src/components/: greeting.rs  mod.rs
crate/src/components/prime_numbers/: functions.rs  mod.rs
dom/: Cargo.toml
dom/src/: lib.rs
dom_interaction/: Cargo.toml  LICENSE  readme.md
dom_interaction/src/: lib.rs
public/: index.html
public/scripts/: index.ts
src/js/: index.js
