[package]
name = "dom_interaction"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gremlich <andrew.gremlich@gmail.com>"]
license = "MIT"
description = "Simplify making web applications with Rust and WebAssembly."
homepage = "https://github.com/andrewgremlich/rust-parcel-learning"
repository = "https://github.com/andrewgremlich/rust-parcel-learning"
keywords = ["webassembly", "dom", "application", "web", "wasm"]
categories = ["wasm", "web-programming"]
readme = "./readme.md"

[dependencies]
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = ['Window', 'Document', 'CssStyleDeclaration', 'HtmlElement', 'Event']
